src/objects/Adjuster_Survey_Sent__c.object
<CustomObject>
    <description>Adjuster surveys sent</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Adjuster, Adjuster Inactive</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Adjuster Surveys Sent</relationshipLabel>
        <relationshipName>Adjuster_Surveys_Sent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Returned_Date__c</fullName>
        <label>Survey Returned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Sent_Date__c</fullName>
        <label>Survey Sent Date</label>
        <type>Date</type>
    </fields>
    <label>Adjuster Survey Sent</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adjuster Surveys Sent</pluralLabel>
    <recordTypes>
        <fullName>Survey_1</fullName>
        <active>true</active>
        <description>Adjuster survey #1 sends</description>
        <label>Survey 1</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>